--- a/style.css
+++ b/style.css
@@ -268,13 +268,26 @@
       .experience-date {
         color: var(--accent);
         font-size: 0.9rem;
-        font-family: "JetBrains Mono", monospace;
+        /* font-family: "JetBrains Mono", monospace; */
       }
 
       .experience-company {
         color: var(--text-secondary);
         font-size: 1rem;
         margin-bottom: 1rem;
+        width: fit-content;
+        padding-bottom: 1px;
+      }
+
+      .experience-company a {
+        color: inherit;
+        text-decoration: none;
+        transition: color 0.3s ease;
+      }
+
+      .experience-company:hover {
+        color: var(--accent);
+        border-bottom: 1px solid var(--accent) ;
       }
 
       .experience-description {
