--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@
         overflow-x: hidden;
       }
 
+      .favicon {
+        width: 100%;
+        object-fit: cover;
+      }
+
       ::-webkit-scrollbar {
         width: 8px;
       }
